# regime_switching_modeling-energy-futures

./: Hidden-Markov-Modeling-Natural-Gas-NG.ipynb  README.md  hmm_natgas.ipynb  main.py  pyproject.toml  requirements.txt
config/: base.yaml  data.yaml  experiment_ng1_daily.yaml  hmm.yaml  hmm_es.yaml  model_hmm.yaml
scripts/: run_backtest_hmm.py  run_fit_hmm.py  run_full_pipeline.py
src/: visualization.py
src/data/: futures_product.py
src/features/: feature_engineering.py
src/hmm_ng/: config.py  data_ingestion.py  features.py  paths.py  pipeline.py  preprocessing.py  visualization.py
src/hmm_ng/models/: evaluation.py  hmm_model.py
src/models/: evaluation.py  hmm_trainer.py
src/pipelines/: hmm_pipeline.py
src/visualization/: plotting.py
